--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="https://mohamedamine4.github.io/PortFolio/">Mohamed_amine</a></p>
+	            <p><a href="https://mohamedamine4.github.io/PortFolio_/Mohamed_amine</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
