--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 	                	<a  class="meta-chat"><span></span>🏆</a>
 	                </p>
                 </div>
-                <h3 class="heading"><a >the SITEC challenge during the recent hackathon at the University of Corsica! 🏆 Our project, "Smart Waste Manager," focused on leveraging AI to revolutionize waste collection in urban and rural areas</a></h3>
+                <h3 class="heading"><a href="https://www.linkedin.com/feed/update/urn:li:activity:7144986577570623489/" >the SITEC challenge during the recent hackathon at the University of Corsica! 🏆 Our project, "Smart Waste Manager," focused on leveraging AI to revolutionize waste collection in urban and rural areas</a></h3>
                 <p>Winner</p>
               </div>
             </div>
