--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 	                	<!-- <a  class="meta-chat"><span class="icon-chat"></span> 3</a> -->
 	                </p>
                 </div>
-                <h3 class="heading"><a >I have developed a website for a polytechnic school of engineering to manage female students in the form of two-month internships</a></h3>
+                <h3 class="heading"><a href="https://github.com/MohamedAmine4/Projet-Gestion-des-Etudiantes-avec-SpringBoot-ReactJs" >I have developed a website for a polytechnic school of engineering to manage female students in the form of two-month internships</a></h3>
                 <p>internships</p>
               </div>
             </div>
