--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart color-danger" aria-hidden="true"></i><a target="_blank"></a></p>
+   &copy;<script>document.write(new Date().getFullYear());</script> Mohamed Amine Boussoualef. All rights reserved <i class="icon-heart color-danger" aria-hidden="true"></i><a target="_blank"></a></p>
           </div>
         </div>
       </div>
