--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+              
               <div class="medium-height one-third js-fullheight order-md-last img" style="background-image:url(images/loading-unscreen.gif); background-size: 90%;  background-position: top;">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-		          	<div class="text">
-		          		<span class="subheading">Hello!</span>
+      		          	<div class="text">
+                        <h1 class="subheading" style="font-size: 24px;color:red"><center>🔴⚠️</center><br>I'm looking for an internship in Artificial Intelligence</h1>
+                        <span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Mohamed Amine Boussoualef</span></h1>
+                  
 			            <h2 class="mb-4">A FULL STACK DEVELOPER</h2>
 			            <p><a href="https://www.linkedin.com/in/mohamed-amine-boussoualef-b78020262/?profileId=ACoAAEBuSIwBwQ75NdcOtzpld3g-SiWXkgZTaWM" class="btn btn-primary py-3 px-4">Hire me</a> <a href="https://github.com/MohamedAmine4?tab=repositories" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -76,8 +79,9 @@
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
+                  <h1 class="subheading" style="font-size: 24px;color:red"><center>🔴⚠️</center><br>I'm looking for an internship in Artificial Intelligence</h1>
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>Back-End and Front-end </span>developer</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span>Artificial Intelligence </span>Engineer</h1>
 			            <p><a href="https://www.linkedin.com/in/mohamed-amine-boussoualef-b78020262/?profileId=ACoAAEBuSIwBwQ75NdcOtzpld3g-SiWXkgZTaWM" class="btn btn-primary py-3 px-4">Hire me</a> <a href="https://github.com/MohamedAmine4?tab=repositories" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -188,6 +192,16 @@
           </div>
         </div>
     		<div class="row">
+          <div class="col-md-4 text-center d-flex ftco-animate">
+						<a  class="services-1">
+							<span class="icon">
+								<i class="flaticon-innovation"></i>
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Artificial Intelligence</h3>
+							</div>
+						</a>
+					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a  class="services-1">
 							<span class="icon">
