--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
 
     <section class="ftco-section" id="services-section">
     	<div class="container">
+        <h1 class="subheading" style="font-size: 29px;color:red"><center>🔴⚠️<br>I'm looking for an internship in Artificial Intelligence</center></h1>
+
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
@@ -587,8 +589,11 @@
 				</div>
 			</div>
 		</section>
-
+    <br>
+    <h1 class="subheading" style="font-size: 29px;color:red"><center>🔴⚠️<br>I'm looking for an internship in Artificial Intelligence</center></h1>
+    <br>
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+  
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -637,8 +642,9 @@
 	          </div>
           </div>
         </div>
-
+  
         <div class="row no-gutters block-9">
+          
           <div class="col-md-6 order-md-last d-flex">
             <form action="https://formsubmit.co/mohammedamineboussoialef@gmail.com" method="POST" class="bg-light p-4 p-md-5 contact-form" >
               <div class="form-group">
