--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		          	<div class="text">
                   <h1 class="subheading" style="font-size: 24px;color:red"><center>🔴⚠️</center><br>I'm looking for an internship in Artificial Intelligence</h1>
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>Artificial Intelligence </span>Engineer</h1>
+			            <h1 class="mb-4 mt-3">I'm an <span>Artificial Intelligence </span>Engineer</h1>
 			            <p><a href="https://www.linkedin.com/in/mohamed-amine-boussoualef-b78020262/?profileId=ACoAAEBuSIwBwQ75NdcOtzpld3g-SiWXkgZTaWM" class="btn btn-primary py-3 px-4">Hire me</a> <a href="https://github.com/MohamedAmine4?tab=repositories" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
