--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" >Portfolio</a>
+	      <a class="navbar-brand" >Portfolio ⚠️</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -58,7 +58,7 @@
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
       		          	<div class="text">
-                        <h1 class="subheading" style="font-size: 24px;color:red"><center>🔴⚠️</center><br>I'm looking for an internship in Artificial Intelligence</h1>
+                        <h1 class="subheading" style="font-size: 24px;color:red"><br>I'm looking for an internship in Artificial Intelligence</h1>
                         <span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Mohamed Amine Boussoualef</span></h1>
                   
@@ -79,7 +79,7 @@
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-                  <h1 class="subheading" style="font-size: 24px;color:red"><center>🔴⚠️</center><br>I'm looking for an internship in Artificial Intelligence</h1>
+                  <h1 class="subheading" style="font-size: 24px;color:red"><br>I'm looking for an internship in Artificial Intelligence</h1>
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm an <span>Artificial Intelligence </span>Engineer</h1>
 			            <p><a href="https://www.linkedin.com/in/mohamed-amine-boussoualef-b78020262/?profileId=ACoAAEBuSIwBwQ75NdcOtzpld3g-SiWXkgZTaWM" class="btn btn-primary py-3 px-4">Hire me</a> <a href="https://github.com/MohamedAmine4?tab=repositories" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
@@ -184,7 +184,7 @@
 
     <section class="ftco-section" id="services-section">
     	<div class="container">
-        <h1 class="subheading" style="font-size: 29px;color:red"><center>🔴⚠️<br>I'm looking for an internship in Artificial Intelligence</center></h1>
+        <h1 class="subheading" style="font-size: 29px;color:red"><center><br>I'm looking for an internship in Artificial Intelligence</center></h1>
 
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -590,7 +590,7 @@
 			</div>
 		</section>
     <br>
-    <h1 class="subheading" style="font-size: 29px;color:red"><center>🔴⚠️<br>I'm looking for an internship in Artificial Intelligence</center></h1>
+    <h1 class="subheading" style="font-size: 29px;color:red"><center><br>I'm looking for an internship in Artificial Intelligence</center></h1>
     <br>
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
   
